@@ -1,5 +1,4 @@
 using System.ComponentModel;
-using Terraria.ModLoader;
 using Terraria.ModLoader.Config;
 
 namespace Arbour;
@@ -10,4 +9,7 @@ public class ArborConfig : ModConfig
 
     [DefaultValue(true)]
     public bool NewMusic { get; set; }
+
+    [DefaultValue(false)]
+    public bool NoMusic { get; set; }
 }
